--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "hardhat": "^2.22.6"
   },
   "dependencies": {
-    "chai": "^5.1.1"
+    "chai": "^5.1.1",
+    "react-toastify": "^10.0.5"
   }
 }
